deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: book-store
  template:
    metadata:
      labels:
        app: book-store
    spec:
      containers:
      - name: book-store
        image: katerinagligorovska/bookstoreapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
