grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: grafana-pod
        volumeMounts:
          - name: config
            mountPath: /etc/grafana/
      volumes:
      - name: config
        configMap:
          name: grafana-config
      serviceAccountName: prometheus

      

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: grafana-pod
    protocol: TCP
  selector:
    app: grafana
