service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-store-service
spec:
  type: LoadBalancer
  selector:
    app: book-store
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
