ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
     kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: bookstore.example.com
    http:
      paths:
      - backend: 
          serviceName: book-store-service
          servicePort: 8080
  - host: prometheus.example.com
    http: 
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
  - host: grafana.example.com
    http: 
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
